@@ -41,6 +41,7 @@ VERSION 2.2.2
     * Improved Cover fetching. Changed Dialog so the user can select from
       possible covers.
     * Improved guessing tags from filename. Added preview to Dialog.
+    * Display frames around lyrics/video applets for indicating focus.
 
   BUGFIXES:
     * Fixed any open menus or popus getting closed when the OSD is shown.
